--- a/templates/cross_language.html
+++ b/templates/cross_language.html
@@ -53,40 +53,16 @@
                             </div>
                         </form>
                     </div>
-
-                    <!-- Target Language Dropdown -->
-                    <h5 class="card-title d-flex justify-content-between align-items-center">
-                        <span>Select Target Language</span>
-                        <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#targetLanguage" aria-expanded="false" aria-controls="targetLanguage">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-                            </svg>
-                        </button>
-                    </h5>
-                    <div class="collapse" id="targetLanguage">
-                        <form method="POST" action="/target-language-selection" class="d-flex align-items-center mb-3">
-                            <div class="mb-3 me-2 flex-grow-1">
-                                <select class="form-control custom-dropdown" name="target_language">
-                                    <option value="" disabled selected>Select Target Language</option>
-                                    <option value="english">English</option>
-                                    <option value="arabic">Arabic</option>
-                                    <option value="french">French</option>
-                                    <option value="chinese">Chinese</option>
-                                    <option value="brazilian">Brazilian</option>
-                                    <option value="indonesian">Indonesian</option>
-                                    <!-- Add more languages here -->
-                                </select>
-                            </div>
-                        </form>
+                    <div id="nameImageContainer" style="display: none;">
+                        <h5>Character Images</h5>
+                        <div id="characterImages"></div> <!-- This will hold the images -->
                     </div>
                     <!-- Submit Button -->
                     <div class="text-center">
-                         <button class="btn btn-primary mt-3 btn-lg" type="submit">Submit</button>
-                    </div>
-
+                        <button class="btn btn-primary mt-3 btn-lg" type="submit">Submit</button>
+                   </div>
                 </div>
-            </div>
-            
+            </div> 
         </div>
     </div>
 </div>
