--- a/templates/cross_language.html
+++ b/templates/cross_language.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Cross language{% endblock title %}
 {% block content %}
+<link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
 <div class="container mt-5">
     <h1 class="text-center text-primary my-3">Cross Language</h1>
     <div class="row justify-content-center">
@@ -22,12 +23,12 @@
                             <div class="mb-3 me-2 flex-grow-1">
                                 <select class="form-control custom-dropdown" name="source_language" id="sourceLanguageDropdown" onchange="updateAlphabet()">
                                     <option value="" disabled selected>Select Source Language</option>
-                                    <option value="english">English</option>
+                                    <option value="american">American</option>
                                     <option value="arabic">Arabic</option>
-                                    <option value="french">French</option>
-                                    <option value="chinese">Chinese</option>
-                                    <option value="brazilian">Brazilian</option>
+                                    <option value="indian">Indian</option>
                                     <option value="indonesian">Indonesian</option>
+                                    <option value="turkish">Turkish</option>
+                                    <option value="ukrainian">Ukrainian</option>
                                     <!-- Add more languages here -->
                                 </select>
                             </div>
@@ -71,48 +72,11 @@
     </div>
 </div>
 
-<!-- Optional Custom CSS -->
-<style>
-    .custom-dropdown {
-        width: 100%; /* Full width for better appearance */
-        border-radius: 50px;
-        padding: 10px;
-        font-size: 1.2rem; /* Match font size */
-    }
-
-    .custom-dropdown:hover {
-        background-color: #f0f8ff;
-        border-color: #007bff;
-    }
-
-    /* New CSS for the mappingResult */
-    #mappingResult {
-        font-size: 1.2rem; /* Adjust the font size here */
-        white-space: pre-wrap; /* Maintain whitespace and allow wrapping */
-    }
-    body {
-    text-align: center; /* Center all text in the body */
-}
-
-.language-container {
-    display: inline-block; /* Allows for the container to center */
-    margin: 20px; /* Adds space between language sections */
-}
-
-.language-container img {
-    display: block; /* Ensure images are treated as block elements */
-    margin: 0 auto; /* Center images horizontally */
-}
-
-
-</style>
-
 <!-- JavaScript for Dynamic Alphabet Update -->
 <script>
     const alphabets = {
-        'english': ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'],
+        'american': ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'],
         'arabic': ['أ', 'ب', 'ت', 'ث', 'ج', 'ح', 'خ', 'د', 'ذ', 'ر', 'ز', 'س', 'ش', 'ص', 'ض', 'ط', 'ظ', 'ع', 'غ', 'ف', 'ق', 'ك', 'ل', 'م', 'ن', 'ه', 'و', 'ي'],
-        'french': ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'],
         // Add more languages and their alphabets here
     };
 
@@ -218,7 +182,7 @@ function fetchImage(language, letter, langContainer) {
 function submitSelection() {
     const sourceLanguage = document.getElementById('sourceLanguageDropdown').value;
     const selectedLetter = document.getElementById('alphabetDropdownSelect').value;
-    const targetLanguages = ['English', 'Arabic', 'Brazilian', 'Chinese', 'French', 'Indonesian'];
+    const targetLanguages = ['American', 'Arabic', 'Indian', 'Indonesian', 'Turkish', 'Ukrainian'];
 
     if (sourceLanguage && selectedLetter) {
         // Fetch mappings for all target languages
