--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,12 +31,12 @@
               Character to Image
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/txt/english">English</a></li>
+              <li><a class="dropdown-item" href="/txt/american">American</a></li>
               <li><a class="dropdown-item" href="/txt/arabic">Arabic</a></li>
-              <li><a class="dropdown-item" href="/txt/french">French</a></li>
-              <li><a class="dropdown-item" href="/txt/chinese">Chinese</a></li>
-              <li><a class="dropdown-item" href="/txt/brazilian">Brazilian</a></li>
+              <li><a class="dropdown-item" href="/txt/indian"> Indian</a></li>
               <li><a class="dropdown-item" href="/txt/indonesian">Indonesian</a></li>
+              <li><a class="dropdown-item" href="/txt/turkish">Turkish</a></li>
+              <li><a class="dropdown-item" href="/txt/ukrainian">Ukrainian</a></li>
             </ul>
           </li>
           <li class="nav-item">
