--- a/templates/classification.html
+++ b/templates/classification.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}{{ language|capitalize }} Sign Language Classification{% endblock title %}
 {% block content %}
-<link rel="stylesheet" href="/static/styles.css"> <!-- Link to the CSS file -->
+<link rel="stylesheet" href="/static/css/styles.css"> <!-- Link to the CSS file -->
 <div class="container mt-5">
     <h1 class="text-center text-primary my-3">{{ language|capitalize }} Sign Language Classification</h1>
     <div class="row justify-content-center">
