--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="icon" href="../static/icon.ico">
+  <link rel="icon" href="/static/images/icon.ico">
   <title> {% block title %}{% endblock title %} </title>
 </head>
 
@@ -18,7 +18,7 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="navbar-brand" href="/">
-              <img src="../static/logo.svg" class="bi me-2" height="40">
+              <img src="/static/images/logo.svg" class="bi me-2" height="40">
               <span style="font-size: 24px; font-weight: bold;">SpellSigns</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
