--- a/templates/sign_to_sign.html
+++ b/templates/sign_to_sign.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Sign to sign{% endblock title %}
 {% block content %}
-<link rel="stylesheet" href="/static/styles.css"> <!-- Link to the CSS file -->
+<link rel="stylesheet" href="/static/css/styles.css"> <!-- Link to the CSS file -->
 <div class="container mt-5">
     <h1 class="text-center text-primary my-3">Sign to Sign</h1>
     <div class="row justify-content-center">
