--- a/templates/index.html
+++ b/templates/index.html
@@ -9,55 +9,56 @@ Homepage
     <h1 class="text-center text-primary my-3" style="font-size: 2.5rem;">About the System</h1>
     
     <p class="text-center" style="font-size: 1.25rem;">
-        This software utilizes deep learning techniques to facilitate seamless communication between different sign languages and text. With an impressive accuracy rate of 95%, it provides the following features:
+        This software utilizes deep learning techniques to facilitate seamless communication between different sign languages and text. With an impressive accuracy rate between 95% and 99%, it provides the following features:
     </p>
 
     <div class="accordion" id="featuresAccordion">
         <div class="accordion-item border-0"> <!-- Removed border -->
             <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" style="font-size: 1.5rem; font-weight: bold;">
-                    Translate Letter to Image
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" style="font-size: 1.2rem; font-weight: bold;">
+                    View the Image of a certain Letter according to the selected langauge(Character to Image: first container)
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#featuresAccordion">
                 <div class="accordion-body" style="font-size: 1.25rem;">
-                    For example, the letter 'C' is translated to its corresponding sign language representation.
+                    For example, the letter 'C' is shown as hand gesture image.
                 </div>
             </div>
         </div>
         <div class="accordion-item border-0"> <!-- Removed border -->
             <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="font-size: 1.5rem; font-weight: bold;">
-                    Translate Written Name to Image
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="font-size: 1.2rem; font-weight: bold;">
+                    Translate Written Name to Image(Character to Image: second container)
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#featuresAccordion">
                 <div class="accordion-body" style="font-size: 1.25rem;">
-                    For instance, the name 'John' is translated to the fingerspelling of each letter.
+                    For instance, the name 'Moura' is translated to the fingerspelling of each letter.
                 </div>
             </div>
         </div>
         <div class="accordion-item border-0"> <!-- Removed border -->
             <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="font-size: 1.5rem; font-weight: bold;">
-                    Translate Text to Another Sign Language
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="font-size: 1.2rem; font-weight: bold;">
+                    Translate Letter to Another Sign Languages (Cross Language)
                 </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#featuresAccordion">
                 <div class="accordion-body" style="font-size: 1.25rem;">
-                    For example, the letter 'C' will be translated to the sign language representation of the letter 'س' in Arabic.
+                    For example, the letter 'C' will be translated to the sign language phonetic representation of the letter 'س/ك' in Arabic, 'C' in Indonesian, 'C' in Indian and 'C' in Turkish .
                 </div>
             </div>
         </div>
         <div class="accordion-item border-0"> <!-- Removed border -->
             <h2 class="accordion-header" id="headingFour">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="font-size: 1.5rem; font-weight: bold;">
-                    Translate Letter of a Sign Language to Another
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="font-size: 1.2rem; font-weight: bold;">
+                    Translate Letter of a Sign Language to Another Letter of another Sign Language (Sign to Sign)
                 </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#featuresAccordion">
                 <div class="accordion-body" style="font-size: 1.25rem;">
-                    For instance, if an image of the letter 'C' is uploaded, it will be translated to an image of the sign for 'س'.
+                    If an image is uploaded after selecting selecting the source language, the model will identify that letter and it will be translated to an image of the selected target language.
+                    For example, if 'English' is selected and a photo is uploaded and the model said it is 'C' and the target language is 'Arabic', the hand gesture 'س' will be shown
                 </div>
             </div>
         </div>
